<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.example.zeux.warnme.SigninFragment"
    tools:showIn="@layout/activity_signin">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:layout_marginTop="29dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField2"
        android:hint="Email"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passField2"
        android:layout_below="@+id/emailField2"
        android:layout_centerHorizontal="true"
        android:hint="Password" />

    <Button
        android:layout_marginTop="65dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/signIn_btn2"
        android:layout_below="@+id/passField2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/havenot_account"
        android:textColor="@color/black"
        android:id="@+id/textView22"
        android:layout_below="@+id/signIn_btn2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/signUp_btn2"
        android:layout_below="@+id/textView22"
        android:layout_alignStart="@+id/signIn_btn2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logging_in"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Created by Muhammed Roudy"
        android:id="@+id/textView3"
        android:layout_below="@+id/signUp_btn2"
        android:layout_marginTop="70dp"
        android:textSize="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
